feat: Ajout de la fonctionnalité de récupération des statistiques globales avec création des routes et services associés
